jira/NMS-14548: Final API fix